navbar: Fix bugs caused by zulip.scss refactor.
A few bugs were caused by 7d4cebbc1eea3e249265cb7e0d63ae0d864936ea.
In night mode:
- home icon was hidden by grey box on "All messages" narrow.
- inactive tabs (eg "mentions" and "stars") were hidden behind grey box.
- topic tab was hidden behind grey box in topic narrow.

In both night mode and normal mode:
- "private messages" tab in individual/group pm narrows was illegible.

These were all results of unexpected differences in precedence rules
caused by the refactor.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -183,7 +183,7 @@ on a dark background, and don't change the dark labels dark either. */
 
     .message-header-contents,
     .message_header_private_message .message-header-contents,
-    #tab_list li.active {
+    #tab_bar #tab_list li.active {
         background-color: hsla(0, 0%, 0%, 0.2);
     }
 
